# trading_concierge

./: LICENSE
trading_concierge_mo/: README.md  docker-compose.yml  run_apps.sh
trading_concierge_mo/desktopApp/: Dockerfile  README.md  package.json  server.js
trading_concierge_mo/desktopApp/css/: app_theme.css
trading_concierge_mo/desktopApp/public/: app.js  index.html
trading_concierge_mo/mcp/: Dockerfile  README.md  README_TESTING.md  mcp-config-example.json  mcp_client.py  mcp_http_server.py  mcp_server.py  pytest.ini  requirements.txt  token_manager.py  validate_env.py
trading_concierge_mo/mcp/tests/: conftest.py  (+1 more)
trading_concierge_mo/trade-blotter-hitl-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SKILL.md  pyproject.toml
trading_concierge_mo/trade-blotter-hitl-agent/assets/: tool_classification.yaml
trading_concierge_mo/trade-blotter-hitl-agent/assets/includes/: desktop_copilot_policy.md  desktop_stack_behaviour.md
trading_concierge_mo/trade-blotter-hitl-agent/docker/: entrypoint.sh
trading_concierge_mo/trade-blotter-hitl-agent/tests/: test_mcp_client.py  test_skills_builder.py  test_tool_factory.py
trading_concierge_mo/trade-blotter-hitl-agent/trade_blotter_hitl_agent/: __init__.py  a2a_app.py  agent.py  config.py  direct_trade_tools.py  hitl.py  mcp_client.py  murex_auth.py  prompts.py  scripts_entry.py  skills_builder.py  tool_factory.py  trade_api_client.py
trading_concierge_mo/tradeQueryApi/: README.API_Usage.md  README.md  README_TESTING.md  main.py  pytest.ini  requirements.txt  view_manager.py
(+11 files in other folders)
